src/objects/Int_Agreement_Classification__c.object
<CustomObject>
    <description>Int Agreement Classification</description>
    <fields>
        <fullName>Agreement_Classification_Code__c</fullName>
        <description>Agreement Classification Code</description>
        <label>Agreement Classification Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Classification_Type_Code__c</fullName>
        <description>Agreement Classification Type Code</description>
        <label>Agreement Classification Type Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name lookup to Agreement Object.</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Classification</relationshipLabel>
        <relationshipName>Int_Agreements_Classification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <label>Int Agreement Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Classification_Type_Code__c</columns>
        <columns>Agreement_Classification_Code__c</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>Committed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACI-{0000000000}</displayFormat>
        <label>Agreement Classification Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Classification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>